05/17/2013
	1. Fixed a bug in the iterator of align_hash_map/set: operator++()
	might read a byte beyond the flag array.
05/16/2013
	1. Fixed a bug in os_regionlock.h potentially affecting all
	concurrent items, e.g., hash_chain_r.
04/09/2013 - 2.0.1 beta:
	1. Fixed a compiling problem for old G++ versions.