@@ -1,15 +1,17 @@
 .PHONY: all clean
 
 all:
-	make -C c++/
+	make -C containers/
 	make -C bloom_filter/
 	make -C comb/
 	make -C console/
 	make -C rng/
+	make -C dyn_prg/
 
 clean:
-	make -C c++/ clean
+	make -C containers/ clean
 	make -C bloom_filter/ clean
 	make -C comb/ clean
 	make -C console/ clean
 	make -C rng/ clean
+	make -C dyn_prg/ clean
